# narator

./: README.md  pyproject.toml
narator/: app.py  audio_tools.py  convertor.py  exceptions.py  export_chapters.py  parser.py  settings.py  storage.py  test.py
narator/core/: audio.py  audio_tools.py  constants.py  dictionary_file.py  dubbing.py  exporter.py  narration.py  parser.py  settings_file.py  text_tools.py  utils.py
narator/core/entities/: artists.py
narator/core/enums/: narration_artists.py  narration_language.py  narration_mode.py  parser_mode.py
narator/core/narators/: base_narrator.py  coqui_narrator.py  narrator_factory.py  yandex_narrator.py
narator/parsers/: _debug_parser.py  base_parser.py  fb2_parser.py  lightnovelworld_parser.py  readli_parser.py  readnovelfull_parser.py
narator/storage/: base.py
