[tool.poetry]
name = "narator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
tts = "^0.21.2"
sqlalchemy = "^2.0.23"
webdriver-manager = "^4.0.1"
selenium = "^4.15.2"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
